# lucid

./: .gitignore  Makefile  README.md  dune-project  lucid.opam
docs/: dune
examples/: builtins.lucid  test.lucid
lib/: directive.ml  dune  inference.ml  lexer.mll  parser.mly  store.ml  term.ml  term_type.ml  typechecker.ml
lib/lang/: dune  input.ml  lexer.mll  parser.mly
test/: dune
